/*
 * Copyright 2018 Loopring Foundation
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";
option java_multiple_files = true;
package io.lightcone.data.requests;

import "data_types.proto";
import "data_order.proto";

message DepositRequest {
    uint32              exchange_id             = 1;
    types.AccountID     account_id              = 2;  // if not exist, the first time that need create
    types.TxData        tx_data                 = 3;
}

message OnchainWithdrawalRequest {
    uint32              exchange_id             = 1;
    types.AccountID     account_id              = 2;
    types.TxData        tx_data                 = 3;
}

message OffchainWithdrawalRequest {
    uint32              exchange_id             = 1;
    types.AccountID     account_id              = 2;
    types.TokenID       token_id                = 3;
    types.Amount        amount                  = 4;
    types.AccountID     wallet_id               = 5;
    types.TokenID       token_f                 = 6;
    types.Amount        amount_f                = 7;
    types.Percentage    wallet_split            = 8;
    types.Nonce         nonce                   = 9;
    types.EdDSASignature sig                    = 10;
}

message OrderCancellationRequest {
    uint32              exchange_id             = 1;
    types.AccountID     account_id              = 2;
    types.OrderID       order_id                = 3;
    types.AccountID     wallet_id               = 4;
    types.TokenID       token_s                 = 5;
    types.TokenID       token_f                 = 6;
    types.Amount        amount_f                = 7;
    types.Percentage    wallet_split_pctg       = 8;
    types.Nonce         nonce                   = 9;
    types.EdDSASignature sig                    = 10;
}
